--- a/index.html
+++ b/index.html
@@ -43,7 +43,54 @@
           </nav>
 
     </header>
-    <main>
+    <main class="container">
+        <h1>Lista de Películas</h1>
+        <section class="row">
+            <article class="col-md-4 col-lg-3 mb-3">
+                <div class="card h-100">
+                    <img src="https://pics.filmaffinity.com/the_super_mario_bros_movie-521125124-large.jpg" class="card-img-top" alt="Super Mario">
+                    <div class="card-body">
+                      <h5 class="card-title">The Super Mario Bros. Movie</h5>
+                    </div>
+                    <div class="card-footer">
+                        <a href="pages/detalle.html" class="btn btn-primary">Detalle</a>
+                    </div>
+                  </div>
+            </article>
+            <article class="col-md-4 col-lg-3 mb-3">
+                <div class="card h-100">
+                    <img src="https://pics.filmaffinity.com/air-500673673-large.jpg" class="card-img-top" alt="Super Mario">
+                    <div class="card-body">
+                      <h5 class="card-title">Air</h5>
+                    </div>
+                    <div class="card-footer">
+                        <a href="pages/detalle.html" class="btn btn-primary">Detalle</a>
+                    </div>
+                  </div>
+            </article>
+            <article class="col-md-4 col-lg-3 mb-3">
+                <div class="card h-100">
+                    <img src="https://pics.filmaffinity.com/air-500673673-large.jpg" class="card-img-top" alt="Super Mario">
+                    <div class="card-body">
+                      <h5 class="card-title">Air</h5>
+                    </div>
+                    <div class="card-footer">
+                        <a href="pages/detalle.html" class="btn btn-primary">Detalle</a>
+                    </div>
+                  </div>
+            </article>
+            <article class="col-md-4 col-lg-3 mb-3">
+                <div class="card h-100">
+                    <img src="https://pics.filmaffinity.com/air-500673673-large.jpg" class="card-img-top" alt="Super Mario">
+                    <div class="card-body">
+                      <h5 class="card-title">Air</h5>
+                    </div>
+                    <div class="card-footer">
+                        <a href="pages/detalle.html" class="btn btn-primary">Detalle</a>
+                    </div>
+                  </div>
+            </article>
+        </section>
 
     </main>
     <footer class="bg-dark text-light text-center py-4">
