--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Películas</title>
 </head>
-<body>
+<body data-bs-theme="dark">
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
@@ -43,9 +43,9 @@
           </nav>
 
     </header>
-    <main class="container">
-        <h1>Lista de Películas</h1>
-        <section class="row">
+    <main class="container my-5">
+        <h1 class="display-4 text-center">Lista de Películas</h1>
+        <section class="row mt-4">
             <article class="col-md-4 col-lg-3 mb-3">
                 <div class="card h-100">
                     <img src="https://pics.filmaffinity.com/the_super_mario_bros_movie-521125124-large.jpg" class="card-img-top" alt="Super Mario">
