--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Películas</title>
 </head>
-<body data-bs-theme="dark">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
@@ -45,6 +45,7 @@
     </header>
     <main class="container my-5">
         <h1 class="display-4 text-center">Lista de Películas</h1>
+        <hr>
         <section class="row mt-4">
             <article class="col-md-4 col-lg-3 mb-3">
                 <div class="card h-100">
@@ -64,7 +65,7 @@
                       <h5 class="card-title">Air</h5>
                     </div>
                     <div class="card-footer">
-                        <a href="pages/detalle.html" class="btn btn-primary">Detalle</a>
+                        <a href="#" class="btn btn-primary">Detalle</a>
                     </div>
                   </div>
             </article>
@@ -91,6 +92,8 @@
                   </div>
             </article>
         </section>
+
+        
 
     </main>
     <footer class="bg-dark text-light text-center py-4">
