--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -132,41 +132,42 @@
                             </fieldset>
                         </div>
                         <div class="mb-2">
-                            <label for="inputTitulo" class="form-label mb-0">Título</label>
+                            <label for="inputTitulo" class="form-label mb-0">Título *</label>
                             <input type="text" class="form-control" id="inputTitulo" placeholder="Ej: Robotech" required>
                         </div>
                         <div class="mb-2">
-                            <label for="inputDescripcion" class="form-label">Descripción</label>
+                            <label for="inputDescripcion" class="form-label">Descripción *</label>
                             <textarea type="text" class="form-control" id="inputDescripcion" placeholder="Ej:" rows="3"></textarea>
                           </div>
                         <div class="mb-2">
-                            <label for="inputImagen" class="form-label mb-0">Imágen</label>
+                            <label for="inputImagen" class="form-label mb-0">Imágen *</label>
                             <input type="text" class="form-control" id="inputImagen" placeholder="Ej: http://127.0.0.1:5500/pages/administrador.html" required>
                         </div>
                         <div class="mb-2">
-                            <label for="inputGeneracion" class="form-label mb-0">Generación</label>
-                            <select class="form-select" aria-label="Default select example">
+                            <label for="inputGeneracion" class="form-label mb-0">Generación *</label>
+                            <select class="form-select" aria-label="Default select example" required>
                                 <option selected>Seleccione una opción</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="1">Aventura</option>
+                                <option value="2">Accion</option>
+                                <option value="3">Drama</option>
+                                <option value="4">Terror</option>
                               </select>
                         </div>
                         <div class="mb-2">
                             <label for="inputAnio" class="form-label mb-0">Año</label>
-                            <input type="number" class="form-control" id="inputAnio" placeholder="Ej: 2023" required>
+                            <input type="number" class="form-control" id="inputAnio" placeholder="Ej: 2023">
                         </div>
                         <div class="mb-2">
                             <label for="inputDuracion" class="form-label mb-0">Duración (en minutos)</label>
-                            <input type="number" class="form-control" id="inputDuracion" placeholder="Ej: 93 min" required>
+                            <input type="number" class="form-control" id="inputDuracion" placeholder="Ej: 93 min">
                         </div>
                         <div class="mb-2">
                             <label for="inputPais" class="form-label mb-0">País</label>
-                            <input type="text" class="form-control" id="inputPais" placeholder="Ej: Argentina" required>
+                            <input type="text" class="form-control" id="inputPais" placeholder="Ej: Argentina" >
                         </div>
                         <div class="mb-2">
                             <label for="inputReparto" class="form-label mb-0">Reparto</label>
-                            <input type="text" class="form-control" id="inputReparto" placeholder="Ej: Chris Pratt, Anya Taylor-Joy, Charlie Day, Jack Black" required>
+                            <input type="text" class="form-control" id="inputReparto" placeholder="Ej: Chris Pratt, Anya Taylor-Joy, Charlie Day, Jack Black">
                         </div>
                     </div>
                     <div class="modal-footer">
