--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -45,21 +45,21 @@
     <main class="container my-5">
         <h1 class="display-5 text-center">Detalle de Película</h1>
         <hr>
-        <section class="row mt-4 mx-1">
-            <div class="card mb-3 ps-0">
+        <section class="d-flex mt-4 justify-content-center">
+            <div class="card col-lg-10">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="https://pics.filmaffinity.com/the_super_mario_bros_movie-521125124-large.jpg" class="img-fluid rounded-start" alt="Super Mario">
+                    <img src="https://pics.filmaffinity.com/the_super_mario_bros_movie-521125124-large.jpg" class="card-img-top" alt="Super Mario">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-7">
                     <div class="card-body">
                       <h5 class="card-title">The Super Mario Bros. Movie</h5>
                       <p class="card-text">Película de animación basada en la franquicia de videojuegos Super Mario Bros. de Nintendo. Está producida por Shigeru Miyamoto, creador de la licencia, y la producira y la animará Ilumination Entertain</p>
-                      <p>Género: Aventura</p>
-                      <p>Año: 2023</p>
-                      <p>Duración: 92</p>
-                      <p>País:</p>
-                      <p>Reparto: - </p>
+                      <p class="card-text">Género: <span class="badge text-bg-info text-light rounded-pill">aventura</span></p>
+                      <p class="card-text">Año: 2023</p>
+                      <p class="card-text">Duración: 92</p>
+                      <p class="card-text">País:</p>
+                      <p class="card-text">Reparto: - </p>
                       <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                     </div>
                   </div>
