--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -185,6 +185,7 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/administrador.js" type="module"></script>
 </body>
 
 </html>
