Se agregó maxlength y minlength a los inputs

--- a/pages/administrador.html
+++ b/pages/administrador.html
@@ -153,17 +153,17 @@
                             <div class="mb-2">
                                 <label for="inputTitulo" class="form-label mb-0">Título *</label>
                                 <input type="text" class="form-control" id="inputTitulo" placeholder="Ej: Robotech"
-                                    required>
+                                    required minlength="1" maxlength="30">
                             </div>
                             <div class="mb-2">
                                 <label for="inputDescripcion" class="form-label">Descripción *</label>
                                 <textarea type="text" class="form-control" id="inputDescripcion" placeholder="Ej:"
-                                    rows="3"></textarea>
+                                    rows="3" required minlength="1" maxlength="200"></textarea>
                             </div>
                             <div class="mb-2">
                                 <label for="inputImagen" class="form-label mb-0">Imágen *</label>
                                 <input type="text" class="form-control" id="inputImagen"
-                                    placeholder="Ej: http://127.0.0.1:5500/pages/administrador.html" required>
+                                    placeholder="Ej: http://127.0.0.1:5500/pages/administrador.html" required minlength="1" maxlength="100">
                             </div>
                             <div class="mb-2">
                                 <label for="inputGeneracion" class="form-label mb-0">Generación *</label>
@@ -177,20 +177,20 @@
                             </div>
                             <div class="mb-2">
                                 <label for="inputAnio" class="form-label mb-0">Año</label>
-                                <input type="number" class="form-control" id="inputAnio" placeholder="Ej: 2023">
+                                <input type="number" class="form-control" id="inputAnio" placeholder="Ej: 2023" minlength="4" maxlength="4">
                             </div>
                             <div class="mb-2">
                                 <label for="inputDuracion" class="form-label mb-0">Duración (en minutos)</label>
-                                <input type="number" class="form-control" id="inputDuracion" placeholder="Ej: 93 min">
+                                <input type="number" class="form-control" id="inputDuracion" placeholder="Ej: 93 min" minlength="1" maxlength="3">
                             </div>
                             <div class="mb-2">
                                 <label for="inputPais" class="form-label mb-0">País</label>
-                                <input type="text" class="form-control" id="inputPais" placeholder="Ej: Argentina">
+                                <input type="text" class="form-control" id="inputPais" placeholder="Ej: Argentina" minlength="2" maxlength="30">
                             </div>
                             <div class="mb-2">
                                 <label for="inputReparto" class="form-label mb-0">Reparto</label>
                                 <input type="text" class="form-control" id="inputReparto"
-                                    placeholder="Ej: Chris Pratt, Anya Taylor-Joy, Charlie Day, Jack Black">
+                                    placeholder="Ej: Chris Pratt, Anya Taylor-Joy, Charlie Day, Jack Black" minlength="1" maxlength="200">
                             </div>
                             <div class="justify-content-start">
                                 <button type="submit" class="btn btn-primary">Enviar</button>
